<resources>
    <string name="app_name">AUH A30 Staff</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search">search</string>
    <string name="SearchKey">Search</string>
    <string name="title_activity_add_baby">Add Baby</string>
    <string-array name="array_gender">
        <item>Choose Gender</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="discharge_baby">The baby was discharged</string>
    <string name="alert_discharge_baby">Are you certain you want to discharge th ebaby from the hospital</string>
    <string name="alertGender">Please select a gender</string>
    <string name="name"><![CDATA[Name: ]]></string>
    <string name="birthday"><![CDATA[Birthday: ]]></string>
    <string name="gender"><![CDATA[Gender: ]]></string>
    <string name="caretaker"><![CDATA[Caretaker: ]]></string>
    <string name="added">Added</string>
    <string name="smsMessage"><![CDATA[Dear new parents. Here is your login ID to AUH A30 Parent App: ]]></string>
    <string name="phonenumber">Phonenumber</string>
    <string name="parentname">Parents name</string>
    <string name="alertMissingInfo">Please fill out all fields</string>
    <string name="Create">Create</string>
    <string name="Update">Update</string>

    <string name="serviceUpdate">Information about your baby has been changed</string>

    <string name="title_activity_baby_detail_drawer">Baby detail</string>
    <string name="udskriv_baby">Discharge Baby</string>
    <string name="parent">Parent: </string>
    <string name="phone">Phone:</string>
    <string name="mail">Mail:</string>
    <string name="toast_contact_warning">Your device does not support this action</string>
    <string name="createbaby">Create baby</string>
    <string name="administratePersonal">Administrate personal</string>
    <string name="enterName">Enter your name</string>
    <string name="create">Create</string>
    <string name="nameHint">Name</string>
    <string name="Title_Edit_Baby">Edit baby</string>

</resources>
